--- a/ZeroDbs/ZeroDbs.csproj
+++ b/ZeroDbs/ZeroDbs.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Database access library of .net standard 2.0 .  Support SqlServer/MySql/Sqlite .</Description>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <Authors>ruzi</Authors>
-    <PackageIcon>favicon.png</PackageIcon>
+    <PackageIcon>favicon.ico</PackageIcon>
     <PackageReleaseNotes>Database access library of .net standard 2.0 .  Support SqlServer/MySql/Sqlite .</PackageReleaseNotes>
   </PropertyGroup>
 
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\ZeroUI\ZeroUI\zeroUI\favicon.png">
+    <None Include="favicon.ico">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
