--- a/ZeroDbs.Test/ZeroDbs.Test.csproj
+++ b/ZeroDbs.Test/ZeroDbs.Test.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="ZeroDbConfig.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
