--- a/ZeroDbs/ZeroDbs.csproj
+++ b/ZeroDbs/ZeroDbs.csproj
@@ -9,7 +9,7 @@
     <FileVersion>3.8.3.0</FileVersion>
     <Version>3.8.3.0</Version>
     <Description>Database access library of .net40/.netcoreapp3.1/.net5/.net6, Support SqlServer/MySql/Sqlite.</Description>
-    <PackageProjectUrl>https://github.com/13039520/ZeroDbs.git</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/13039520/ZeroDbs</PackageProjectUrl>
     <PackageReleaseNotes>Interface adjustments and bug fixes</PackageReleaseNotes>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
