--- a/ZeroDbs/ZeroDbs.csproj
+++ b/ZeroDbs/ZeroDbs.csproj
@@ -28,29 +28,47 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PackageReference Include="Google.Protobuf">
+      <Version>3.28.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Data.SqlClient">
-      <Version>4.1.0</Version>
+      <Version>5.2.2</Version>
     </PackageReference>
     <PackageReference Include="MySql.Data">
       <Version>8.0.28</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SqlClient">
+      <Version>4.8.6</Version>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+    <PackageReference Include="Google.Protobuf">
+      <Version>3.28.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Data.SqlClient">
-      <Version>4.1.0</Version>
+      <Version>5.2.2</Version>
     </PackageReference>
     <PackageReference Include="MySql.Data">
       <Version>8.0.28</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.SqlClient">
+      <Version>4.8.6</Version>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+		<PackageReference Include="Google.Protobuf">
+		  <Version>3.28.0</Version>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Data.SqlClient">
-			<Version>4.1.0</Version>
+			<Version>5.2.2</Version>
 		</PackageReference>
 		<PackageReference Include="MySql.Data">
 			<Version>8.0.28</Version>
+		</PackageReference>
+		<PackageReference Include="System.Data.SqlClient">
+		  <Version>4.8.6</Version>
 		</PackageReference>
   </ItemGroup>
 
