--- a/ZeroDbs.Test/ZeroDbs.Test.csproj
+++ b/ZeroDbs.Test/ZeroDbs.Test.csproj
@@ -19,4 +19,11 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MyDbs\MySql001\" />
+    <Folder Include="MyDbs\Pg001\" />
+    <Folder Include="MyDbs\Sqlite001\" />
+    <Folder Include="MyDbs\SqlServer001\" />
+  </ItemGroup>
+
 </Project>
