--- a/ZeroDbs/ZeroDbs.csproj
+++ b/ZeroDbs/ZeroDbs.csproj
@@ -10,7 +10,7 @@
     <Version>4.1.0.0</Version>
     <Description>Database access library of .net40/.netcoreapp3.1/.net5/.net6, Support SqlServer/MySql/Sqlite/PostgreSql.</Description>
     <PackageProjectUrl>https://github.com/13039520/ZeroDbs</PackageProjectUrl>
-    <PackageReleaseNotes>Add master-slave database logic and fix known bugs</PackageReleaseNotes>
+    <PackageReleaseNotes>Add support for PostgreSQL databases</PackageReleaseNotes>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <ItemGroup>
@@ -43,9 +43,6 @@
     <PackageReference Include="Npgsql">
       <Version>9.0.4</Version>
     </PackageReference>
-    <PackageReference Include="System.Data.SqlClient">
-      <Version>4.8.6</Version>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
@@ -57,9 +54,6 @@
     </PackageReference>
     <PackageReference Include="MySql.Data">
       <Version>8.0.28</Version>
-    </PackageReference>
-    <PackageReference Include="System.Data.SqlClient">
-      <Version>4.8.6</Version>
     </PackageReference>
 	<PackageReference Include="Npgsql">
 		<Version>8.0.8</Version>
@@ -75,9 +69,6 @@
 		</PackageReference>
 		<PackageReference Include="MySql.Data">
 			<Version>8.0.28</Version>
-		</PackageReference>
-		<PackageReference Include="System.Data.SqlClient">
-		  <Version>4.8.6</Version>
 		</PackageReference>
 	  <PackageReference Include="Npgsql">
 		  <Version>8.0.8</Version>
